# animal-kingdom-game

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  record  report  run
animal_kingdom/: __init__.py  cli.py  decks.py
animal_kingdom/bots/: base.py  determinize.py  features.py  greedy_bot.py  learned_eval.py  random_bot.py  referee_bot.py  turn_bot.py  turn_search.py
animal_kingdom/data/: cards.json  maps.json  two_action_config.json
animal_kingdom/engine/: __init__.py  actions.py  cards.py  config.py  effects.py  maps.py  resources.py  rules.py  state.py  statics.py  strength.py
animal_kingdom/learn/: __init__.py  artifacts.py  episodes.py  promote.py  td.py  train.py
animal_kingdom/recording/: __init__.py  cohort.py  provenance.py  schedule.py  session.py  writer.py
animal_kingdom/render/: text.py
animal_kingdom/sim/: __main__.py  benchmark_set.py  bot_comparison.py  conquest.py  deck_optimizer.py  gauntlet.py  human_scorer.py  measure_deck.py  metagame_evolution.py  metagame_search.py  metrics.py  ratings.py  referee_comparison.py  replay.py  report.py  roster_experiment.py  rules_ab.py  runner.py
animal_kingdom/tests/: _helpers.py  test_benchmark_set.py  test_bot_puzzles.py  test_card_text_consistency.py  test_decision_g_caps.py  test_determinize.py  test_effects.py  test_engine.py  test_features.py  test_food_otk.py  test_gauntlet.py  test_greedy_bot.py  test_keywords.py  test_learn.py  test_learned_eval.py  test_loading.py  test_metagame_evolution.py  test_pool.py  test_ratings.py  test_recording.py  test_referee_bot.py  test_referee_comparison.py  test_render.py  test_replay.py  test_report.py  test_rules.py  test_rules_ab.py  test_sim.py  test_tui.py  test_turn_bot.py
configs/: draw2.json
docs/: STATUS.md  card-candidates.md  cards-json-rebuild-prompt.md  cards.md  effect-worklist-reworked.md  handoff-engine.md  handoff-turnbot-status.md  keyword-review-immovable-untargetable.md  keywords.md  maps.md  overview.md  simulation-platform-roadmap.md  todo.md
(+85 files in other folders)
