[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "animal-kingdom"
version = "0.0.1"
description = "Headless rules engine, bots, and simulation harness for the Animal Kingdom game"
requires-python = ">=3.11"
# Core engine is standard-library only — no runtime dependencies (handoff §5).
dependencies = []

[project.optional-dependencies]
# Analysis layer only (sim/metrics and sim/ratings). Kept out of the engine.
analysis = ["numpy>=1.26", "scipy>=1.11", "pandas>=2.0"]
# Terminal presentation only (cli.py / render/). engine/ and bots/ stay stdlib-only.
cli = ["rich>=13.7"]
tui = ["textual>=8.2,<9"]
dev = ["pytest>=7.0", "rich>=13.7", "textual>=8.2,<9", "numpy>=1.26", "scipy>=1.11"]

[tool.setuptools]
packages = [
    "animal_kingdom",
    "animal_kingdom.engine",
    "animal_kingdom.bots",
    "animal_kingdom.sim",
    "animal_kingdom.render",
    "animal_kingdom.recording",
    "animal_kingdom.tui",
]

[tool.setuptools.package-data]
animal_kingdom = ["data/*.json"]

[tool.pytest.ini_options]
testpaths = ["animal_kingdom/tests"]
